--- a/charts/patroni/values.yaml
+++ b/charts/patroni/values.yaml
@@ -1,42 +1,40 @@
 replicaCount: 3
 
-project: patroni
-nameOverride: patroni
-fullnameOverride: patroni
-
 image:
-  # Image was built from
-  # https://github.com/zalando/spilo/tree/master/postgres-appliance
+  # see https://github.com/zalando/spilo/releases
   repository: registry.opensource.zalan.do/acid/spilo-14
+  pullPolicy: Always
   tag: 2.1-p5
-  pullPolicy: IfNotPresent
+
+nameOverride: ""
+fullnameOverride: ""
+
+postgresMajorVersion: 14
 
 # Credentials used by Patroni
-# https://github.com/zalando/patroni/blob/master/docs/SETTINGS.rst#postgresql
-# https://github.com/zalando/spilo/blob/master/ENVIRONMENT.rst
-auth:
-  existingSecret:
+credentials:
+  existingSecret: false
   superuser:
     username: postgres
-    password: tea
+    password:
   admin:
     username: admin
-    password: cola
+    password:
   standby:
     username: standby
-    password: pinacolada
+    password:
 
-appdb:
-  create: false
-  dbname:
+additionalCredentials:
 
 # Distribution Configuration stores
 # Please note that only one of the following stores should be enabled.
 kubernetes:
+  roleLabel: "spilo-role"
   dcs:
     enable: true
   configmaps:
-    enable: false
+    enable: true
+
 etcd:
   enable: false
   deployChart: false
@@ -84,25 +82,34 @@ walE:
   # to consider WAL-E restore instead of pg_basebackup
   backupThresholdPercentage: 30
 
+rbac:
+  # Specifies whether RBAC resources should be created
+  create: true
+
+serviceAccount:
+  # Specifies whether a service account should be created
+  create: true
+  # Annotations to add to the service account
+  annotations: {}
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name: ""
+
 persistentVolume:
   enabled: true
   size: 1G
-  ## database data Persistent Volume Storage Class
-  ## If defined, storageClassName: <storageClass>
-  ## If set to "-", storageClassName: "", which disables dynamic provisioning
-  ## If undefined (the default) or set to null, no storageClassName spec is
-  ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
-  ##   GKE, AWS & OpenStack)
-  ##
-  # storageClass: "-"
+  storageClass: netapp-block-standard
   subPath: ""
-  mountPath: "/home/postgres/pgdata"
+  mountPath: /home/postgres/pgdata
   annotations: {}
   accessModes:
     - ReadWriteOnce
 
-resources: {}
-  # If you do want to specify resources, uncomment the following
+resources:
+  {}
+  # We usually recommend not to specify default resources and to leave this as a conscious
+  # choice for the user. This also increases chances charts run on environments with little
+  # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # limits:
   #   cpu: 100m
@@ -125,22 +132,18 @@ affinityTemplate: |
       podAffinityTerm:
         topologyKey: "kubernetes.io/hostname"
         labelSelector:
-          matchLabels:
-            app:  {{ template "patroni.name" . }}
-            release: {{ .Release.Name | quote }}
+          matchLabels: {{ include "patroni.selectorLabels" . | nindent 10 }}
+
 affinity: {}
 ## Use an alternate scheduler, e.g. "stork".
 ## ref: https://kubernetes.io/docs/tasks/administer-cluster/configure-multiple-schedulers/
 ##
 # schedulerName:
 
-rbac:
-  # Specifies whether RBAC resources should be created
-  create: true
+networkPolicy:
+  enabled: true
 
-serviceAccount:
-  # Specifies whether a ServiceAccount should be created
-  create: true
-  # The name of the ServiceAccount to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name:
+pdb:
+  enabled: true
+  minAvailable: 1
+  maxUnavailable:
