--- a/charts/patroni/Chart.yaml
+++ b/charts/patroni/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 name: patroni
 description: "Highly available elephant herd: HA PostgreSQL cluster."
-version: 0.18.0
+version: 1.0.0
 appVersion: 2.1-p5
-home: https://github.com/zalando/patroni
+home: https://github.com/bcgov/sso-helm-charts/tree/main/charts/patroni
 sources:
   - https://github.com/zalando/patroni
   - https://github.com/zalando/spilo
