--- a/charts/patroni/templates/statefulset.yaml
+++ b/charts/patroni/templates/statefulset.yaml
@@ -2,71 +2,85 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ template "patroni.fullname" . }}
-  labels:
-    app: {{ template "patroni.fullname" . }}
-    chart: {{ template "patroni.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
-    project: {{ template "patroni.project" . }}
+  labels: {{ include "patroni.labels" . | nindent 4 }}
 spec:
   serviceName: {{ template "patroni.fullname" . }}
   replicas: {{ .Values.replicaCount }}
   selector:
-    matchLabels:
-      app: {{ template "patroni.fullname" . }}
-      release: {{ .Release.Name }}
-      project: {{ template "patroni.project" . }}
+    matchLabels: {{ include "patroni.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       name: {{ template "patroni.fullname" . }}
-      labels:
-        app: {{ template "patroni.fullname" . }}
-        release: {{ .Release.Name }}
-        project: {{ template "patroni.project" . }}
+      labels: {{ include "patroni.labels" . | nindent 8 }}
     spec:
       serviceAccountName: {{ template "patroni.serviceAccountName" . }}
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        # see https://patroni.readthedocs.io/en/latest/rest_api.html#health-check-endpoints
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /readiness
+            port: 8008
+          initialDelaySeconds: 3
+          periodSeconds: 10
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 3
+        livenessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /liveness
+            port: 8008
+          initialDelaySeconds: 3
+          periodSeconds: 10
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 3
         env:
+        - name: PGVERSION
+          value: {{ .Values.postgresMajorVersion | quote }}
         - name: PGUSER_SUPERUSER
           valueFrom:
             secretKeyRef:
-              name: {{ if .Values.auth.existingSecret }}{{ .Values.auth.existingSecret }}{{ else }}{{ template "patroni.fullname" . }}{{ end }}
+              name: {{ if .Values.credentials.existingSecret }}{{ .Values.credentials.existingSecret }}{{ else }}{{ template "patroni.fullname" . }}{{ end }}
               key: username-superuser
         - name: PGUSER_ADMIN
           valueFrom:
             secretKeyRef:
-              name: {{ if .Values.auth.existingSecret }}{{ .Values.auth.existingSecret }}{{ else }}{{ template "patroni.fullname" . }}{{ end }}
+              name: {{ if .Values.credentials.existingSecret }}{{ .Values.credentials.existingSecret }}{{ else }}{{ template "patroni.fullname" . }}{{ end }}
               key: username-admin
         - name: PGUSER_STANDBY
           valueFrom:
             secretKeyRef:
-              name: {{ if .Values.auth.existingSecret }}{{ .Values.auth.existingSecret }}{{ else }}{{ template "patroni.fullname" . }}{{ end }}
+              name: {{ if .Values.credentials.existingSecret }}{{ .Values.credentials.existingSecret }}{{ else }}{{ template "patroni.fullname" . }}{{ end }}
               key: username-standby
         - name: PGPASSWORD_SUPERUSER
           valueFrom:
             secretKeyRef:
-              name: {{ if .Values.auth.existingSecret }}{{ .Values.auth.existingSecret }}{{ else }}{{ template "patroni.fullname" . }}{{ end }}
+              name: {{ if .Values.credentials.existingSecret }}{{ .Values.credentials.existingSecret }}{{ else }}{{ template "patroni.fullname" . }}{{ end }}
               key: password-superuser
         - name: PGPASSWORD_ADMIN
           valueFrom:
             secretKeyRef:
-              name: {{ if .Values.auth.existingSecret }}{{ .Values.auth.existingSecret }}{{ else }}{{ template "patroni.fullname" . }}{{ end }}
+              name: {{ if .Values.credentials.existingSecret }}{{ .Values.credentials.existingSecret }}{{ else }}{{ template "patroni.fullname" . }}{{ end }}
               key: password-admin
         - name: PGPASSWORD_STANDBY
           valueFrom:
             secretKeyRef:
-              name: {{ if .Values.auth.existingSecret }}{{ .Values.auth.existingSecret }}{{ else }}{{ template "patroni.fullname" . }}{{ end }}
+              name: {{ if .Values.credentials.existingSecret }}{{ .Values.credentials.existingSecret }}{{ else }}{{ template "patroni.fullname" . }}{{ end }}
               key: password-standby
+        - name: KUBERNETES_ROLE_LABEL
+          value: {{ .Values.kubernetes.roleLabel }}
         {{- if .Values.kubernetes.dcs.enable }}
         - name: DCS_ENABLE_KUBERNETES_API
           value: "true"
         - name: KUBERNETES_LABELS
-          value: {{ (printf "{ \"app\": \"%s\", \"release\": \"%s\" }" (include "patroni.fullname" .) .Release.Name) | quote }}
+          value: {{ (printf "{ \"app.kubernetes.io/name\": \"%s\", \"app.kubernetes.io/instance\": \"%s\" }" (include "patroni.name" .) .Release.Name) | quote }}
         - name: KUBERNETES_SCOPE_LABEL
-          value: "app"
+          value: "app.kubernetes.io/instance"
         {{- if .Values.kubernetes.configmaps.enable }}
         - name: KUBERNETES_USE_CONFIGMAPS
           value: "true"
@@ -98,7 +112,7 @@ spec:
         {{- end }}
         {{- end }}
         - name: SCOPE
-          value: {{ template "patroni.fullname" . }}
+          value: {{ .Release.Name }}
         {{- if .Values.walE.enable }}
         - name: USE_WALE
           value: {{ .Values.walE.enable | quote }}
@@ -206,10 +220,7 @@ spec:
         {{- if .Values.persistentVolume.annotations }}
 {{ toYaml .Values.persistentVolume.annotations | indent 8 }}
         {{- end }}
-        labels:
-          app: {{ template "patroni.fullname" . }}
-          release: {{ .Release.Name }}
-          heritage: {{ .Release.Service }}
+        labels: {{ include "patroni.labels" . | nindent 10 }}
       spec:
         accessModes:
 {{ toYaml .Values.persistentVolume.accessModes | indent 8 }}
