chore: set empty value form additionalCredentials value

--- a/charts/patroni/values.yaml
+++ b/charts/patroni/values.yaml
@@ -24,7 +24,7 @@ credentials:
     username: standby
     password:
 
-additionalCredentials:
+additionalCredentials: {}
 
 # Distribution Configuration stores
 # Please note that only one of the following stores should be enabled.
