--- a/.github/workflows/publish-helm-chart.yml
+++ b/.github/workflows/publish-helm-chart.yml
@@ -27,6 +27,10 @@ jobs:
         with:
           version: v3.8.2
 
+      - name: Add Helm Dependencies
+        run: |
+          helm repo add patroni https://bcgov.github.io/sso-helm-charts
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.4.0
         with:
