--- a/charts/keycloak/Chart.yaml
+++ b/charts/keycloak/Chart.yaml
@@ -1,5 +1,10 @@
 apiVersion: v1
 name: sso-keycloak
-version: 0.1.8
+version: 1.0.0
 appVersion: 7.5-9-rc.2
 description: Open Source Identity and Access Management For Modern Applications and Services
+dependencies:
+  - name: patroni
+    version: 1.1.2
+    repository: https://bcgov.github.io/sso-helm-charts
+    condition: patroni.install
