--- a/charts/keycloak/templates/service-app.yaml
+++ b/charts/keycloak/templates/service-app.yaml
@@ -5,7 +5,7 @@ metadata:
   labels: {{ include "sso-keycloak.labels" . | nindent 4 }}
   annotations:
     {{- if .Values.tls.enabled }}
-    service.alpha.openshift.io/serving-cert-secret-name: {{ .Values.tls.httpsSecret }}
+    service.alpha.openshift.io/serving-cert-secret-name: {{ include "sso-keycloak.fullname" . }}-https-jgroups
     {{- end }}
 spec:
   type: {{ .Values.service.type }}
