--- a/charts/keycloak/templates/secret.yaml
+++ b/charts/keycloak/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "sso-keycloak.fullname" . }}-admin-secret
+  name: {{ include "sso-keycloak.fullname" . }}-admin
   labels: {{ include "sso-keycloak.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": "pre-install"
