--- a/charts/keycloak/values.yaml
+++ b/charts/keycloak/values.yaml
@@ -26,7 +26,7 @@ postgres:
   database: ssokeycloak
   port: 5432
   credentials:
-    secret: sso-keycloak-patroni
+    secret: sso-keycloak-patroni-appusers
     usernameKey: username-appuser1
     passwordKey: password-appuser1
     username: postgres
@@ -66,9 +66,8 @@ patroni:
   replicaCount: 3
 
   additionalCredentials:
-    ssokeycloak:
+    ssokeycloak: ""
 
-  resources: {}
   persistentVolume:
     size: 10Gi
 
