--- a/charts/patroni/values.yaml
+++ b/charts/patroni/values.yaml
@@ -24,6 +24,11 @@ credentials:
     username: standby
     password:
 
+# Additional users and databases; each user will have full privileges on the same name of the database
+# leave an empty string to generate the password automatically
+# example
+# additionalCredentials:
+#   myapp: ""
 additionalCredentials: {}
 
 # Distribution Configuration stores
