feat(patroni): allow nossl connection by default

--- a/charts/patroni/templates/statefulset.yaml
+++ b/charts/patroni/templates/statefulset.yaml
@@ -42,6 +42,10 @@ spec:
         env:
         - name: PGVERSION
           value: {{ .Values.postgresMajorVersion | quote }}
+        {{- if .Values.allowNoSSL }}
+        - name: ALLOW_NOSSL
+          value: "true"
+        {{- end }}
         - name: PGUSER_SUPERUSER
           valueFrom:
             secretKeyRef:
