chore(patroni): take list type instead of map type in additional users

--- a/charts/keycloak/values.yaml
+++ b/charts/keycloak/values.yaml
@@ -76,7 +76,8 @@ patroni:
   fullnameOverride: sso-patroni
 
   additionalCredentials:
-    ssokeycloak: ""
+    - username: ssokeycloak
+      password:
 
   persistentVolume:
     size: 10Gi
