--- a/charts/patroni/templates/secret-appusers.yaml
+++ b/charts/patroni/templates/secret-appusers.yaml
@@ -15,8 +15,8 @@ data:
   username-{{ $user }}: {{ index $secret.data (print "username-" $user) }}
   password-{{ $user }}: {{ index $secret.data (print "password-" $user) }}
   {{- else }}
-  username-{{ $user }}: {{ $key | b64enc }}
-  password-{{ $user }}: {{ $value | default (randAlphaNum 32) | b64enc }}
+  username-{{ $user }}: {{ $value.username | b64enc }}
+  password-{{ $user }}: {{ $value.password | default (randAlphaNum 32) | b64enc }}
   {{- end }}
   {{ $index = add1 $index }}
   {{- end }}
