chore(patroni): fix additional credentials default

--- a/charts/patroni/values.yaml
+++ b/charts/patroni/values.yaml
@@ -30,7 +30,7 @@ credentials:
 # additionalCredentials:
 #   - username: myapp
 #     password:
-additionalCredentials: {}
+additionalCredentials: []
 
 # set to allow clients to connect without SSL enabled.
 allowNoSSL: true
