--- a/charts/keycloak/Chart.yaml
+++ b/charts/keycloak/Chart.yaml
@@ -1,10 +1,11 @@
 apiVersion: v1
 name: sso-keycloak
-version: 1.3.1
+version: 1.4.0
 appVersion: 7.5-9-rc.2
 description: Open Source Identity and Access Management For Modern Applications and Services
 dependencies:
   - name: patroni
-    version: 1.3.2
+    version: 1.3.3
     repository: https://bcgov.github.io/sso-helm-charts
-    condition: patroni.install
+    tags:
+      - patroni-enabled
