--- a/.github/workflows/publish-helm-chart.yml
+++ b/.github/workflows/publish-helm-chart.yml
@@ -37,4 +37,16 @@ jobs:
           charts_dir: charts
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          # CR_SKIP_EXISTING: true
+
+      - name: Run chart-releaser
+        uses: mikefarah/yq@master
+        with:
+          cmd: yq -i 'del(.dependencies) | .version = .version + "-nodep"' Chart.yaml
+          working-directory: ./charts/keycloak
+
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.4.0
+        with:
+          charts_dir: charts
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
