--- a/charts/keycloak/Chart.yaml
+++ b/charts/keycloak/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 name: sso-keycloak
-version: 1.4.1-nodb
-appVersion: 7.5-9-rc.2
+version: 1.5.0
+appVersion: 7.5-9-build.4
 description: Open Source Identity and Access Management For Modern Applications and Services
-# dependencies:
-#   - name: patroni
-#     version: 1.3.3
-#     repository: https://bcgov.github.io/sso-helm-charts
-#     tags:
-#       - patroni-enabled
+dependencies:
+  - name: patroni
+    version: 1.3.3
+    repository: https://bcgov.github.io/sso-helm-charts
+    tags:
+      - patroni-enabled
