--- a/.github/workflows/publish-helm-chart.yml
+++ b/.github/workflows/publish-helm-chart.yml
@@ -38,11 +38,10 @@ jobs:
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: Run chart-releaser
+      - name: Remove dependencies of Keycloak Helm chart
         uses: mikefarah/yq@master
         with:
-          cmd: yq -i 'del(.dependencies) | .version = .version + "-nodep"' Chart.yaml
-          working-directory: ./charts/keycloak
+          cmd: yq -i 'del(.dependencies) | .version = .version + "-nodep"' ./charts/keycloak/Chart.yaml
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.4.0
