--- a/charts/patroni/templates/job-appdb.yaml
+++ b/charts/patroni/templates/job-appdb.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.standby.enabled }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -71,3 +72,4 @@ spec:
                 name: {{ template "patroni.fullname" . }}-appusers
       restartPolicy: Never
   backoffLimit: 1
+{{- end }}
