--- a/charts/patroni/values.yaml
+++ b/charts/patroni/values.yaml
@@ -68,24 +68,20 @@ consul:
 # see https://github.com/zalando/spilo/blob/master/ENVIRONMENT.rst#environment-configuration-settings
 env: {}
 
-walE:
-  # Specifies whether Wal-E should be enabled
-  enable: false
+walG:
+  # Specifies whether Wal-G should be enabled
+  enabled: false
   # Cron schedule for doing base backups
   scheduleCronJob: 00 01 * * *
   # Amount of base backups to retain
   retainBackups: 2
-  # Path to the S3 or GCS bucket used for WAL-E base backups
-  s3Bucket:
-  gcsBucket:
-  # Name of the secret that holds the credentials to the bucket
-  kubernetesSecret:
-  # Maximum size of the WAL segments accumulated after the base backup to
-  # consider WAL-E restore instead of pg_basebackup
-  backupThresholdMegabytes: 1024
-  # Maximum ratio (in percents) of the accumulated WAL files to the base backup
-  # to consider WAL-E restore instead of pg_basebackup
-  backupThresholdPercentage: 30
+
+  # see https://github.com/wal-g/wal-g/blob/master/docs/STORAGES.md
+  storage: pvc
+  pvc:
+    size: 500Mi
+    storageClass: netapp-file-backup
+    mountPath: /home/postgres/backups
 
 rbac:
   # Specifies whether RBAC resources should be created
