--- a/charts/patroni/values.yaml
+++ b/charts/patroni/values.yaml
@@ -75,6 +75,12 @@ walG:
   scheduleCronJob: 00 01 * * *
   # Amount of base backups to retain
   retainBackups: 2
+  # Maximum size of the WAL segments accumulated after the base backup to
+  # consider WAL-G restore instead of pg_basebackup
+  backupThresholdMegabytes: 1024
+  # Maximum ratio (in percents) of the accumulated WAL files to the base backup
+  # to consider WAL-G restore instead of pg_basebackup
+  backupThresholdPercentage: 30
 
   # see https://github.com/wal-g/wal-g/blob/master/docs/STORAGES.md
   storage: pvc
