feat: add maintenance page app

--- a/charts/keycloak/templates/route.yaml
+++ b/charts/keycloak/templates/route.yaml
@@ -16,4 +16,8 @@ spec:
     {{ end }}
   to:
     kind: Service
+    {{ if and .Values.maintenancePage.enabled .Values.maintenancePage.on }}
+    name: {{ include "sso-keycloak.fullname" . }}-maintenance
+    {{ else }}
     name: {{ include "sso-keycloak.fullname" . }}
+    {{ end }}
