--- a/charts/keycloak/values.yaml
+++ b/charts/keycloak/values.yaml
@@ -21,6 +21,16 @@ pingService:
   enabled: true
   port: 8888
 
+maintenancePage:
+  enabled: false
+  on: false
+  replicaCount: 1
+  image:
+    repository: ghcr.io/bcgov/sso-maintenance
+    tag: dev
+    pullPolicy: Always
+  resources: {}
+
 postgres:
   host: sso-patroni
   database: ssokeycloak
