--- a/charts/keycloak/templates/service-app.yaml
+++ b/charts/keycloak/templates/service-app.yaml
@@ -5,6 +5,7 @@ metadata:
   labels: {{ include "sso-keycloak.labels" . | nindent 4 }}
   annotations:
     {{- if .Values.tls.enabled }}
+    # see https://miminar.fedorapeople.org/_preview/openshift-enterprise/registry-redeploy/dev_guide/secrets.html#service-serving-certificate-secrets
     service.alpha.openshift.io/serving-cert-secret-name: {{ include "sso-keycloak.fullname" . }}-x509-https
     {{- end }}
 spec:
