--- a/charts/keycloak/templates/service-ping.yaml
+++ b/charts/keycloak/templates/service-ping.yaml
@@ -8,6 +8,7 @@ metadata:
     description: "The JGroups ping port for clustering."
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
     {{- if .Values.tls.enabled }}
+    # see https://miminar.fedorapeople.org/_preview/openshift-enterprise/registry-redeploy/dev_guide/secrets.html#service-serving-certificate-secrets
     service.alpha.openshift.io/serving-cert-secret-name: {{ include "sso-keycloak.fullname" . }}-x509-jgroups
     {{- end }}
 spec:
