--- a/charts/keycloak/values.yaml
+++ b/charts/keycloak/values.yaml
@@ -2,12 +2,17 @@ replicaCount: 1
 
 image:
   repository: ghcr.io/bcgov/sso
-  tag: 7.5-9-rc.2
+  tag: 7.6.2-build.2
   pullPolicy: Always
 
 project: sso-keycloak
 nameOverride: sso-keycloak
 fullnameOverride: sso-keycloak
+
+configuration:
+  enabled: false
+  version: '7.6'
+  data:
 
 networkPolicies:
   enabled: true
