feat(keycloak): support option to define keycloak admin credentials

--- a/charts/keycloak/templates/secret.yaml
+++ b/charts/keycloak/templates/secret.yaml
@@ -1,15 +1,20 @@
+{{- $adminSecretName := (printf "%s-admin" (include "sso-keycloak.fullname" .)) }}
+{{- $adminSecret := (lookup "v1" "Secret" .Release.Namespace $adminSecretName ) }}
+
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "sso-keycloak.fullname" . }}-admin
+  name: {{ $adminSecretName }}
   labels: {{ include "sso-keycloak.labels" . | nindent 4 }}
-  annotations:
-    "helm.sh/hook": "pre-install"
-    "helm.sh/hook-delete-policy": "before-hook-creation"
 type: Opaque
 data:
-  username: {{ randAlphaNum 8 | b64enc | quote }}
-  password: {{ randAlphaNum 32 | b64enc | quote }}
+  {{- if $adminSecret }}
+  username: {{ index $adminSecret.data "username" }}
+  password: {{ index $adminSecret.data "password" }}
+  {{- else }}
+  username: {{ .Values.admin.username | default (randAlphaNum 8) | b64enc }}
+  password: {{ .Values.admin.password | default (randAlphaNum 32) | b64enc }}
+  {{- end }}
 ---
 apiVersion: v1
 kind: Secret
