chore: support rolling update configuration

--- a/charts/keycloak/templates/deployment.yaml
+++ b/charts/keycloak/templates/deployment.yaml
@@ -7,11 +7,11 @@ metadata:
   labels: {{ include "sso-keycloak.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  {{- if .Values.rollingUpdate }}
   strategy:
     type: RollingUpdate
-    rollingUpdate:
-      maxSurge: "25%" # how many pod we can add at a time
-      maxUnavailable: 0 # how many pod can be unavailable
+    rollingUpdate: {{ .Values.rollingUpdate | toYaml | nindent 6 }}
+  {{- end }}
   minReadySeconds: 30 # The minimum number of seconds for which a newly created Pod should be ready
   selector:
     matchLabels: {{ include "sso-keycloak.selectorLabels" . | nindent 6 }}
